--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-pager-view": "5.4.24",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-tab-view": "^3.1.1"
+    "react-native-tab-view": "^3.1.1",
+    "@stripe/stripe-react-native": "0.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
